# zmpris-rs

./: Cargo.toml
src/: lib.rs  media_player.rs  player.rs  playlists.rs  track_list.rs
src/blocking/: discovery.rs  mod.rs
src/shared/: loop_status.rs  mod.rs  playback_status.rs  playlist_ordering.rs  playlist_struct.rs  type_alias.rs
src/sync/: discovery.rs  mod.rs
