[package]
name = "zmpris"
version = "0.1.0"
edition = "2021"
license = "LGPL-2"

[dependencies]
tokio = { version = "~1.40", features = ["macros", "rt"] }
log = "~0.4"
zbus = { version = "~5.0" }
zbus_macros = "~5.0"
zvariant = "~5.0"
futures = "~0.3.31"
serde = "~1.0"
anyhow = "~1.0"

[dev-dependencies]
test-log = "0.2.16"
tokio = { version = "~1.40", features = ["time"] }
